Fix whitespace at end/scrolling problem

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,3 +14,13 @@
  *= require_self
  */
  
+p.alert {
+  padding: 0px; 
+  margin-bottom: 0px; 
+  border: none;
+  border-radius: 0;
+}
+
+p.notice{
+  margin: 0px; 
+}
