--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -3,8 +3,13 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/*/
 
 #landing-bg {
-  width: 100vw;
-  height: 100vh;
+/*  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+*/  
+  /*margin-top: 220px;*/
+/*  width: 100vw;
+  height: 100vh;*/
   color: white;
 }
 
